# taskaza

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  environment.yml  render.yaml  requirements.dev.txt  requirements.txt
.github/workflows/: deploy-backend.yml  deploy-ui.yml  deploy.yml  ping-taskaza.yml  test.yml
app/: db.py  main.py  models.py  schemas.py
app/api/v1/: login.py  tasks.py  users.py
app/core/: auth.py  config.py  dependencies.py  metadata.py
app/crud/: task.py  user.py
app/db/: database.py  models.py  schemas.py  session.py
app/models/: user.py
app/schemas/: task.py  token.py  user.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/v1/: apikeys.py  auth_email.py  login.py  tasks.py  users.py
backend/app/core/: auth.py  config.py  dependencies.py  metadata.py  security.py  timeutils.py
backend/app/crud/: apikey.py  email_token.py  task.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  apikey.py  email_token.py  task.py  user.py
backend/app/schemas/: apikey.py  email_token.py  task.py  token.py  user.py
backend/app/services/: mailer.py
backend/docs/: ARCHITECTURE.md  ASSESSMENT.md  postman_collection.json
backend/tests/: conftest.py  test_auth.py  test_auth_and_users.py  test_invalid_auth.py  test_tasks.py  test_tasks_basic.py  test_tasks_nested.py  test_users_delete.py  utils.py
docs/: ARCHITECTURE.md
frontend/: .dockerignore  .prettierrc.json  AGENTS.md  Dockerfile.dev  Dockerfile.prod  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: logo.tsx  theme-toggle.tsx
frontend/src/data/: faqs.ts  features.ts  logos.ts  nav-links.ts  (+1 more)
tests/: conftest.py  test_integration.py  test_invalid_auth.py  test_tasks.py
(+37 files in other folders)
